change icons, add new assets and fix bugs

--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ h3 {
 a {
     text-decoration: none;
     cursor: pointer;
-    color: white;
+    color: black;
     transition: all 0.3s ease-in-out;
 }
 
