--- a/main.css
+++ b/main.css
@@ -1,82 +1,81 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Sora&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dosis&family=Sora&display=swap");
 
 html {
-    color: white;
-    font-family: 'Dosis', sans-serif;
-    cursor: default;
+  color: white;
+  font-family: "Dosis", sans-serif;
+  cursor: default;
 }
 
-
 #background-video {
-    height: 100vh;
-    width: 100vw;
-    object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .centered {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h1 {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 h2 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 h3 {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 a {
-    text-decoration: none;
-    cursor: pointer;
-    color: black;
-    transition: all 0.3s ease-in-out;
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
+  transition: all 0.3s ease-in-out;
 }
 
 a:hover {
-    transition: all 0.3s ease-in-out;
-    color: orangered;
+  transition: all 0.3s ease-in-out;
+  color: orangered;
 }
 
 .bottomright {
-    position: absolute;
-    bottom: .65%;
-    padding-left: .65%;
-    padding-top: .65%;
-    right: 0!important;
-    bottom: 0!important;
-    margin-right: 30px;
+  position: absolute;
+  bottom: 0.65%;
+  padding-left: 0.65%;
+  padding-top: 0.65%;
+  right: 0 !important;
+  bottom: 0 !important;
+  margin-right: 30px;
 }
 
 img {
-    margin-right: 10px;
-    transition: all 0.3s ease-in-out;
+  margin-right: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 img:hover {
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-    transform: scale(1.2) translateY(-10px);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  transform: scale(1.2) translateY(-10px);
 }
 
 #logo {
-    cursor: default;
-    transition: all 0.2s ease-in-out;
+  cursor: default;
+  transition: all 0.2s ease-in-out;
 }
 
 #logo:hover {
-    transition: all 0.2s ease-in-out;
-    transform: rotate(-8deg);
+  transition: all 0.2s ease-in-out;
+  transform: rotate(-8deg);
 }
